Fix aligned

--- a/src/component/buttonHome/buttonHome.module.scss
+++ b/src/component/buttonHome/buttonHome.module.scss
@@ -1,45 +1,43 @@
 @import "../../styles/variables.scss";
 
-  .buttonUp{
-    margin: -7px 11px 0 0;
-    font-size: 60px;
-    transform: rotate(-90deg);
-    cursor: pointer;
+.buttonUp {
+  margin: -4px 8px 0 0;
+  font-size: 40px;
+  transform: rotate(-90deg);
+  cursor: pointer;
+ 
+}
 
-  }
-
-.backLight{
-
-  height: 40px;
-  width: 40px;
+.backLight {
+  height: 20px;
+  width: 20px;
   border-radius: 50%;
-  transition: .4s ease all;
+  transition: 0.4s ease all;
   position: fixed;
   bottom: 20px;
-  right:20px;
+  right: 20px;
   color: $color-gray;
-  &:hover{
+  &:hover {
     box-shadow: $box-shadow;
     background: $color-black;
     color: $color-white;
-    transition: .4s ease all;
+    transition: 0.4s ease all;
   }
 }
-.backNight{
-
-  height: 40px;
-  width: 40px;
+.backNight {
+  height: 20px;
+  width: 20px;
   border-radius: 50%;
-  transition: .4s ease all;
+  transition: 0.4s ease all;
   position: fixed;
   bottom: 20px;
-  right:20px;
+  right: 20px;
   background: $color-black;
   color: $color-gray;
-  &:hover{
+  &:hover {
     box-shadow: $box-shadow2;
     background: $color-white;
     color: $color-black2;
-    transition: .4s ease all;
+    transition: 0.4s ease all;
   }
 }
