--- a/src/component/footer/footer.module.scss
+++ b/src/component/footer/footer.module.scss
@@ -6,7 +6,6 @@
   text-align: center;
   margin-top: 4rem;
   width: 100%;
-  //height: 80vh;
   font-size: x-large;
   font-weight: 600;
 
@@ -60,6 +59,8 @@
       }
     }
     @media screen and (max-width: $screen-m) {
+  
+      height: 180vh;
       .p{
         font-size: large;
       }
